# merge-path

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  COVERAGE.txt  Claudecode questions.txt  DECISIONS.md  DONE_CHECKLIST.md  E2E_RESULTS.md  FAILURE_MODE_TESTS.md  README.md  TEST_RESULTS.md  alembic.ini  answers.txt  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  config.py  log_bus.py  main.py  seed.py  ui.py
app/agents/: __init__.py  fix_plan_agent.py
app/api/: prs.py  (+12 more)
build_docs/: .env.example
data/: patchpilot.db
files/: 02_patch_generator.md  02_pipeline_state_machine.md  04_pr_description.md  05_log_streaming.md  API_CONTRACT.md  DATA_MODEL.md
scripts/: screenshot.py
tests/: conftest.py  fixtures.py  test_code_mapper_classify.py  test_codex_runner.py  test_comment_planner.py  test_crypto.py  test_github_client.py  test_github_client_more.py  test_guardrails.py  test_health_scorer.py  test_issue_fix_pipeline.py  test_issue_scorer.py  test_issues_endpoint.py  test_metrics_endpoint.py  test_no_brainer_pipeline.py  test_no_brainer_scanner.py  test_onboarding_pipeline.py  test_pr_pattern_analyzer.py  test_pr_writer.py  test_profiler.py  test_repo_url.py  test_repos_endpoint.py  test_repro_engine.py  test_runs_endpoint.py  test_settings_endpoint.py  test_slug.py  test_smoke.py  test_sse.py  test_strategy.py  test_traction.py  test_traction_strategy.py
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+97 files in other folders)
