[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patchpilot"
version = "0.1.0"
description = "Autonomous OSS contribution agent — local single-user app."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "PatchPilot" }]
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "httpx==0.28.1",
    "PyGithub==2.5.0",
    "arq==0.26.3",
    "redis==5.2.1",
    "sse-starlette==2.2.1",
    "cryptography==44.0.0",
    "python-dotenv==1.0.1",
    "anyio==4.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "respx==0.22.0",
    "freezegun==1.5.1",
    "fakeredis==2.26.1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
